--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.3",
     "@storybook/react": "^9.1.6",
+    "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/cli-progress": "^3.11.6",
