Ensure Next runs from project root

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm run prebuild && next dev -p 3000",
+    "dev": "npm run prebuild && tsx scripts/run-next.ts dev -p 3000",
     "prebuild": "tsx scripts/regen-if-needed.ts && npm run generate-themes && npm run generate-tokens",
     "regen-ui": "tsx scripts/generate-ui-index.ts",
     "build-gallery-usage": "node --import tsx --import ./scripts/register-loaders.mjs scripts/build-gallery-usage.ts",
     "regen-feature": "tsx scripts/generate-feature-index.ts",
     "generate-themes": "tsx scripts/generate-themes.ts",
     "generate-tokens": "tsx scripts/generate-tokens.ts",
-    "build": "next build",
-    "start": "next start -p 3000",
+    "build": "tsx scripts/run-next.ts build",
+    "start": "tsx scripts/run-next.ts start -p 3000",
     "lint": "node -r ./scripts/setup-eslint-flat.cjs ./node_modules/eslint/bin/eslint.js --cache --cache-location .eslintcache src",
     "typecheck": "tsx scripts/typecheck.ts",
     "test": "vitest",
