--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "12.23.18",
     "fuse.js": "^7.1.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "^19.1.1",
