Replace Geist font shim with placeholder

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -12,6 +12,7 @@ on:
       - completed
     branches:
       - main
+      - work
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
