--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "framework": "nextjs",
   "frameworkVersion": "15.5.3",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "installCommand": "npm install --include=dev"
 }
