chore: enforce design tokens and gallery states

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "lint": "node -r ./scripts/setup-eslint-flat.cjs ./node_modules/eslint/bin/eslint.js --cache --cache-location .eslintcache src",
     "typecheck": "tsx scripts/typecheck.ts",
     "test": "vitest",
-    "check": "concurrently \"npm test -- --run\" \"npm run lint\" \"npm run typecheck\"",
+    "lint:design": "tsx scripts/design-lint.ts",
+    "design-lint": "npm run lint:design",
+    "check": "concurrently \"npm test -- --run\" \"npm run lint\" \"npm run lint:design\" \"npm run typecheck\"",
     "format": "prettier --write .",
     "verify-prompts": "tsx scripts/verify-prompts.ts",
     "check-prompts": "tsx scripts/check-prompts-updated.ts",
-    "design-lint": "tsx scripts/design-lint.ts",
     "contrast-report": "tsx scripts/contrast-report.ts",
     "postinstall": "tsx scripts/regen-if-needed.ts",
     "prepare": "husky",
