--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.3",
     "@storybook/react": "^9.1.6",
+    "@storybook/react-vite": "^9.1.6",
     "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
