--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.3",
+    "@playwright/test": "^1.55.1",
     "@storybook/react": "^9.1.6",
     "@storybook/react-vite": "^9.1.6",
     "@tailwindcss/postcss": "^4.1.13",
@@ -57,6 +58,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@axe-core/playwright": "^4.10.2",
     "autoprefixer": "^10.4.21",
     "cli-progress": "^3.12.0",
     "concurrently": "^9.2.1",
