--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "types": [
       "vitest/globals",
       "react",
-      "node"
+      "node",
+      "@playwright/test"
     ],
     "plugins": [
       {
