Add gallery preview routes and visual coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,7 @@
     "types": [
       "vitest/globals",
       "react",
-      "node",
-      "@playwright/test"
+      "node"
     ],
     "plugins": [
       {
