--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI
 
+permissions: read-all
+
 concurrency:
-  group: ci-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 on:
@@ -10,6 +12,7 @@ on:
       - 'docs/**'
       - '**/*.md'
       - 'CHANGELOG.md'
+  workflow_dispatch:
   push:
     branches:
       - main
