--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "build": "tsx scripts/run-next.ts build",
     "start": "tsx scripts/run-next.ts start -p 3000",
     "lint": "node -r ./scripts/setup-eslint-flat.cjs ./node_modules/eslint/bin/eslint.js --cache --cache-location .eslintcache src",
+    "lint:ci": "npm run lint -- --max-warnings=0",
     "typecheck": "tsx scripts/typecheck.ts",
+    "typecheck:ci": "npm run typecheck -- --pretty false",
     "test": "vitest",
+    "test:ci": "vitest run --reporter=default --reporter=junit --outputFile artifacts/unit/junit.xml --coverage --coverage.reporter=lcov --coverage.reporter=json-summary",
+    "e2e:ci": "playwright test",
     "lint:design": "tsx scripts/design-lint.ts",
     "design-lint": "npm run lint:design",
     "check": "concurrently \"npm test -- --run\" \"npm run lint\" \"npm run lint:design\" \"npm run typecheck\"",
@@ -31,7 +35,8 @@
     "postinstall": "tsx scripts/regen-if-needed.ts",
     "prepare": "husky",
     "launch": "tsx scripts/launcher.ts",
-    "deploy": "tsx scripts/deploy-gh-pages.ts"
+    "deploy": "tsx scripts/deploy-gh-pages.ts",
+    "report:summary": "node scripts/report-summary.mjs"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -47,6 +52,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@next/eslint-plugin-next": "^15.5.3",
     "@playwright/test": "^1.55.1",
     "@storybook/react": "^9.1.6",
@@ -58,7 +64,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@axe-core/playwright": "^4.10.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "cli-progress": "^3.12.0",
     "concurrently": "^9.2.1",
